--- a/package.json
+++ b/package.json
@@ -8,21 +8,35 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "@vuelidate/core": "^2.0.0-alpha.21",
+    "@vuelidate/validators": "^2.0.0-alpha.18",
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vuelidate": "^0.7.6",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.0.0-beta3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-bootstrap-vue": "~0.7.0",
+    "vue-cli-plugin-pug": "~2.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +50,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-mutating-props": 1
+    }
   },
   "browserslist": [
     "> 1%",
